--- a/SLBr/Controls/ImageTray.xaml
+++ b/SLBr/Controls/ImageTray.xaml
@@ -56,7 +56,7 @@
                     </StackPanel>
                     <StackPanel Grid.Column="1">
                         <TextBlock Margin="0,0,0,10" VerticalAlignment="Center">Downloads</TextBlock>
-                        <ScrollViewer x:Name="DownloadsScrollViewer" HorizontalScrollBarVisibility="Auto" PreviewMouseWheel="DownloadsScrollViewer_PreviewMouseWheel">
+                        <ScrollViewer local:SmoothScrollBehavior.Enable="True" x:Name="DownloadsScrollViewer" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
                             <ItemsControl ItemsSource="{Binding DownloadImages}">
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
