--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -1693,7 +1693,6 @@ Margin="{TemplateBinding Padding}"/>
         </Setter>
     </Style>
 
-    <!-- TopLevelHeader -->
     <ControlTemplate x:Key="{x:Static MenuItem.TopLevelHeaderTemplateKey}" TargetType="{x:Type MenuItem}">
         <Border Name="Border">
             <Grid>
@@ -1729,15 +1728,10 @@ Margin="{TemplateBinding Padding}"/>
                 <Setter TargetName="Border" Property="Background" Value="{DynamicResource BorderBrush}"/>
                 <Setter TargetName="Border" Property="BorderBrush" Value="Transparent"/>
             </Trigger>
-            <!--Snippettoplevelheader-->
             <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="True">
                 <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="5"/>
                 <Setter TargetName="SubmenuBorder" Property="Padding" Value="0"/>
             </Trigger>
-            <!--/Snippettoplevelheader-->
-            <!--<Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
-            </Trigger>-->
         </ControlTemplate.Triggers>
     </ControlTemplate>
     <Style x:Key="IconMenu" TargetType="{x:Type MenuItem}">
@@ -1815,16 +1809,11 @@ Margin="{TemplateBinding Padding}"/>
                             <Setter TargetName="SubmenuBorder" Property="CornerRadius" Value="5"/>
                             <Setter TargetName="SubmenuBorder" Property="Padding" Value="0"/>
                         </Trigger>
-                        <!--/Snippettoplevelheader-->
-                        <!--<Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
-            </Trigger>-->
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    <!-- TopLevelItem -->
     <ControlTemplate 
     x:Key="{x:Static MenuItem.TopLevelItemTemplateKey}" 
     TargetType="{x:Type MenuItem}">
@@ -1841,13 +1830,9 @@ Margin="{TemplateBinding Padding}"/>
                 <Setter TargetName="Border" Property="Background" Value="{DynamicResource BorderBrush}"/>
                 <Setter TargetName="Border" Property="BorderBrush" Value="Transparent"/>
             </Trigger>
-            <!--<Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
-            </Trigger>-->
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <!-- SubmenuItem -->
     <ControlTemplate 
     x:Key="{x:Static MenuItem.SubmenuItemTemplateKey}" 
     TargetType="{x:Type MenuItem}">
@@ -1967,7 +1952,6 @@ Margin="{TemplateBinding Padding}"/>
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <!-- SubmenuHeader -->
     <ControlTemplate 
     x:Key="{x:Static MenuItem.SubmenuHeaderTemplateKey}" 
     TargetType="{x:Type MenuItem}">
@@ -3149,7 +3133,7 @@ Margin="{TemplateBinding Padding}"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <ScrollViewer VerticalScrollBarVisibility="Auto">
+                        <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto">
                             <TabPanel Grid.Column="0" Panel.ZIndex="1" Margin="5" IsItemsHost="True" Background="Transparent"/>
                         </ScrollViewer>
 
