--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -86,6 +86,7 @@
                                 </MenuItem>-->
                                 <MenuItem Header="Tools" Icon="&#xe821;">
                                     <MenuItem Header="Create QR Code" Icon="&#xed14;" Click="ButtonAction" Tag="57&lt;,&gt;0"/>
+                                    <MenuItem Header="Share" Icon="&#xe72d;" Click="ButtonAction" Tag="33"/>
                                     <MenuItem Header="Reader Mode" Icon="&#xF000;" Click="ButtonAction" Tag="17"/>
                                     <MenuItem Header="News Feed" Icon="&#xe8a1;" Click="ButtonAction" Tag="23"/>
                                     <Separator/>
@@ -460,10 +461,10 @@
                                 <DataTemplate>
                                     <StackPanel Focusable="False" Orientation="Horizontal" Margin="0">
                                         <Border Margin="-8,0,5,0" Width="30" Height="30" BorderThickness="1" BorderBrush="{StaticResource BorderBrush}" CornerRadius="5" Background="{StaticResource PrimaryBrush}">
-                                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="18" Text="{Binding Icon}" Foreground="{Binding Color}"/>
+                                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="18" Text="{Binding Icon}"/>
                                         </Border>
-                                        <TextBlock Text="{Binding Text}" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                                        <TextBlock Text="{Binding Result}" Foreground="{StaticResource GrayBrush}" VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding Display}" Foreground="{Binding Color}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                                        <TextBlock Text="{Binding SubText}" Foreground="{StaticResource GrayBrush}" VerticalAlignment="Center"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
