--- a/SLBr/MainWindow.xaml
+++ b/SLBr/MainWindow.xaml
@@ -39,5 +39,35 @@
                 </Border>
             </Popup>
         </Grid>
+        <Popup x:Name="TabPreviewPopup" SnapsToDevicePixels="True" Placement="Bottom" IsHitTestVisible="False" Focusable="False" AllowsTransparency="True" IsOpen="False" PopupAnimation="Fade" VerticalOffset="-7.5" HorizontalOffset="-10">
+            <Border CornerRadius="5">
+                <Border.Effect>
+                    <DropShadowEffect Direction="-75" ShadowDepth="1" Opacity="0.5" BlurRadius="15" Color="Gray"/>
+                </Border.Effect>
+                <Border Width="245" Background="{StaticResource PrimaryBrush}" BorderThickness="1" BorderBrush="{StaticResource BorderBrush}" CornerRadius="5" Padding="0,10,0,0" Margin="10">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock x:Name="TabPreviewHeader" Margin="10,0" FontWeight="Bold" Foreground="{StaticResource FontBrush}"/>
+                        <TextBlock x:Name="TabPreviewHost" Grid.Row="1" Margin="10,0,10,10" FontSize="10" Foreground="{StaticResource GrayBrush}"/>
+                        <Image MaxHeight="150" Grid.Row="2" x:Name="TabPreviewImage" Stretch="Uniform"/>
+                        <Border Grid.Row="3" Background="{StaticResource SecondaryBrush}" CornerRadius="0,0,5,5">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock x:Name="TabPreviewStateIcon" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" FontSize="14" Margin="10,10,7.5,10" FontFamily="{StaticResource IconFontFamily}" Foreground="{StaticResource GrayBrush}"/>
+                                <TextBlock Grid.Column="1" x:Name="TabPreviewState" Grid.Row="1" Margin="0,10,10,10" Foreground="{StaticResource GrayBrush}"/>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </Border>
+            </Border>
+        </Popup>
     </Grid>
 </Window>
