--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -2377,7 +2377,7 @@ Margin="{TemplateBinding Padding}"/>
         <Setter Property="Background" Value="{DynamicResource PrimaryBrush}"/>
 
         <Setter Property="Header" Value="{Binding Header}"/>
-        <Setter Property="ToolTip" Value="{Binding Header}"/>
+        <!--<Setter Property="ToolTip" Value="{Binding Header}"/>-->
         <Setter Property="Tag" Value="{Binding ID}"/>
         <Setter Property="AllowDrop" Value="True"/>
         <EventSetter Event="PreviewMouseMove" Handler="TabItem_PreviewMouseMove"/>
@@ -2388,7 +2388,7 @@ Margin="{TemplateBinding Padding}"/>
                     <Grid>
                         <Border Opacity="0" Name="BorderMouseOver" Background="{DynamicResource BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5" Margin="0,0,5,0"/>
                         <Border Name="Border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5" Margin="0,0,5,0"/>
-                        <Border Background="Transparent" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5" Margin="0,0,5,0">
+                        <Border MouseDown="TabItem_MouseDown" MouseEnter="TabItem_MouseEnter" MouseLeave="TabItem_MouseLeave" Background="Transparent" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5" Margin="0,0,5,0">
                             <!--<DockPanel VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="Auto" Margin="7.5,5" LastChildFill="False">
                                 <StackPanel VerticalAlignment="Center" Orientation="Horizontal" DockPanel.Dock="Left">
                                     <Image VerticalAlignment="Center" HorizontalAlignment="Center" Height="20" Width="20">
